# AbwCall-now712

./: .env.example  .replit  CONTRIBUTING.md  LICENSE  README.md  app.json  docker-compose.yml  metro.config.js  package-lock.json  package.json  pyproject.toml  replit.md  replit.yaml  tsconfig.json
.expo/: settings.json
.github/workflows/: SETUP_GUIDE.md  android-build.yml  ci.yml  ios-build.yml
app/: +not-found.tsx  _layout.tsx  index.tsx
app/(tabs)/: _layout.tsx  calls.tsx  contacts.tsx  home.tsx  wallet.tsx
app/auth/: _layout.tsx  login.tsx  signup.tsx
app/call/: [id].tsx
attached_assets/: تطبيق_فلوب_4_1774930084037.txt  تطبيق_فلوب_5_1774989049310.txt
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: test_auth.py
components/: CallInterface.tsx  ContactItem.tsx  PhoneNumberInput.tsx  RateDisplay.tsx  TransactionItem.tsx  WalletCard.tsx
constants/: colors.ts  config.ts  index.ts  sizes.ts
contexts/: AuthContext.tsx
docs/: API.md  DEPLOYMENT.md  TROUBLESHOOTING.md
frontend/: .env.example  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
frontend/.expo/: settings.json
frontend/android/: build.gradle  gradle.properties  settings.gradle
frontend/app/: +not-found.tsx  _layout.tsx  index.tsx
frontend/components/: CallInterface.tsx  (+6 more)
hooks/: useContacts.ts
lib/: api.ts
nginx/: nginx.conf
types/: call.ts  contact.ts  transaction.ts
utils/: formatting.ts  storage.ts  validation.ts
(+110 files in other folders)
